--- a/quote/templates/common/base.html
+++ b/quote/templates/common/base.html
@@ -36,7 +36,8 @@
                     <div class="row align-items-center">
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
-                                <a href="index.html" class="logo"><img src="{% static "img/logo.png" %}" alt="">
+            
+                                <a href="{% url "index" %}" class="logo"><img src="{% static "img/logo.png" %}" alt="">
                                 </a>
                             </div>
                         </div>
@@ -55,7 +56,7 @@
                                     <div class="top-bar-item">
                                         
                                         <div class="top-bar-text">
-                                            <h3>Whatsapp</h3>  <p>+61 413 328 479</p>
+                                            <h3>Whatsapp</h3>  <p>+{{ owner.mobile_number }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -64,7 +65,7 @@
                                         
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>sales@boxbulkcontainers.com</p>
+                                            <p>{{ owner.email }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -138,8 +139,8 @@
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>Level 3/97 Pirie St, Adelaide SA 5000 Australia</p>
                                 
-								<p><i class="fa fa-whatsapp"></i>Whatsapp: +61 413 328 479</p>
-                                <p><i class="fa fa-envelope"></i>sales@boxbulkcontainers.com</p>
+								<p><i class="fa fa-whatsapp"></i>Whatsapp: +{{ owner.mobile_number }}</p>
+                                <p><i class="fa fa-envelope"></i>{{ owner.email }}</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -220,7 +221,7 @@
         <script type="text/javascript">
             (function () {
                 var options = {
-                    whatsapp: "+61 413 328 479", // WhatsApp number
+                    whatsapp: "+{{ owner.mobile_number }}", // WhatsApp number
                     call_to_action: "Message us", // Call to action
                     position: "left", // Position may be 'right' or 'left'
                 };
