--- a/quote/templates/quotation.html
+++ b/quote/templates/quotation.html
@@ -57,8 +57,14 @@
                         </div>
                         <div class="col-md-6">
                             <div class="contact-form">
+                                {% if message %}
+                                    <div class="alert alert-success" role="alert">
+                                        {{ message }}
+                                    </div>
+                                {% endif %}
                                
-								 <form method="post" action="quotation.php">
+								 <form method="post" action="quotation">
+                                    {% csrf_token %}
                                     <div class="control-group">
                                         <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required="required" "Please enter your name" />
                                        
