--- a/quote/templates/contact.html
+++ b/quote/templates/contact.html
@@ -38,21 +38,27 @@
                         <i class="flaticon-call"></i>
                         <div class="contact-text">
                             <h2>Whatsapp:</h2>
-                            <p>+61 413 328 479</p>
+                            <p>+{{ owner.mobile_number }}</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="flaticon-send-mail"></i>
                         <div class="contact-text">
                             <h2>Email</h2>
-                            <p>sales@boxbulkcontainers.com</p>
+                            <p>{{ owner.email }}</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="contact-form">
-                        <form method="post" action="mail.php">
+                        {% if message %}
+                            <div class="alert alert-success" role="alert">
+                                {{ message }}
+                            </div>
+                        {% endif %}
+                        <form method="post" action="contact">
+                            {% csrf_token %}
                         <div class="control-group">
                             <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required="required" "Please enter your name" />
                             <p class="help-block text-danger"></p>
